--- a/test.html
+++ b/test.html
@@ -27,7 +27,7 @@ h3 { font-size: 22px; font-family: monospace; font-weight: 100; color: #778;}
 	<H1>AARON OPFER</H1>
 	<H2>...</H2>
 	<H3>LOADING<SPAN id=dots>&nbsp;&nbsp;&nbsp;</SPAN></H3>
-	<a class=social id=fb target="_blank"></a><a title="Share on Twitter" href="https://twitter.com/share" class=social id=tw target="_blank"></a>
+	<a title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php" class=social id=fb target="_blank"></a><a title="Share on Twitter" href="https://twitter.com/share" class=social id=tw target="_blank"></a>
 </DIV>
 <CANVAS id=canvas></CANVAS>
 </BODY>
