Fix select box in mozilla

--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@ h1, h2, h3 { text-align:center;}
 h1 { font-size: 42px; }
 h2 { font-size: 32px; }
 h3 { font-size: 22px; font-family: monospace; font-weight: 100; color: #778;}
-select { box-sizing: content-box; margin: 4px 1px !important; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background-image: url('select.png'); outline: 0}
+select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 1px !important; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background-image: url('select.png'); outline: 0}
 select:hover { background-image: url('select-h.png'); }
 @media screen and (max-height: 700px) {
 	html,body { margin-top: 10px }
