--- a/test.html
+++ b/test.html
@@ -8,7 +8,7 @@ canvas { width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index
 #content { position: relative; z-index: 2; text-align: center }
 
 h1, h2, h3 { text-align:center;}
-.social { border: 2px solid #556; border-radius: 7px; padding: 2px; margin: 4px; width: 24px; height: 24px; background-size: 24px; display: inline-block; background-position: center; background-repeat: no-repeat; }
+.social { border: 2px solid #556; border-radius: 7px; padding: 2px; margin: 4px; width: 24px; height: 24px; background-size: 24px; display: inline-block; background-position: center; background-repeat: no-repeat; background-color: rgba(22, 0, 26, 0.33) }
 .social:hover { border-color: #aab; }
 #fb { background-image: url('fb.png'); } #fb:hover { background-image: url('fb-h.png') }
 #tw { background-image: url('tw.png'); } #tw:hover { background-image: url('tw-h.png') }
