--- a/test.html
+++ b/test.html
@@ -13,9 +13,9 @@ h1, h2, h3 { text-align:center;}
 #fb { background-image: url('fb.png'); } #fb:hover { background-image: url('fb-h.png') }
 #tw { background-image: url('tw.png'); } #tw:hover { background-image: url('tw-h.png') }
 h1 { font-size: 42px; }
-h2 { font-size: 32px; }
+#song { font-size: 32px; display: inline-block; font-weight: bold;}
 h3 { font-size: 22px; font-family: monospace; font-weight: 100; color: #778;}
-select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 1px !important; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background-image: url('select.png'); outline: 0}
+select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 1px !important; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background: url('select.png') no-repeat center; background-size: 24px 24px; outline: 0; width: 24px; height: 24px; padding: 4px; border: 0; }
 select:hover { background-image: url('select-h.png'); }
 @media screen and (max-height: 700px) {
 	html,body { margin-top: 10px }
@@ -27,13 +27,15 @@ select:hover { background-image: url('select-h.png'); }
 <BODY>
 <DIV id=content>
 	<H1>AARON OPFER</H1>
-	<H2>...</H2>
+	<DIV>
+		<select id=directory>
+			<option value=punkish>PUNKISH</option>
+			<option value=dangerous>DANGEROUS ROAD</option>
+			<option value=simplicity>SOME SIMPLICITY</option>
+		</select>
+		<label id=song>...</label>
+	</DIV>
 	<H3>LOADING<SPAN id=dots>&nbsp;&nbsp;&nbsp;</SPAN></H3>
-	<select class=social id=directory>
-		<option value=punkish>PUNKISH</option>
-		<option value=dangerous>DANGEROUS ROAD</option>
-		<option value=simplicity>SOME SIMPLICITY</option>
-	</select>
 	<a title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php" class=social id=fb target="_blank"></a><a title="Share on Twitter" href="https://twitter.com/share" class=social id=tw target="_blank"></a>
 </DIV>
 <CANVAS id=canvas></CANVAS>
