--- a/test.html
+++ b/test.html
@@ -15,7 +15,7 @@ h1, h2, h3 { text-align:center;}
 h1 { font-size: 42px; }
 #song { font-size: 32px; display: inline-block; font-weight: bold;}
 h3 { font-size: 22px; font-family: monospace; font-weight: 100; color: #778;}
-select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 1px !important; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background: url('select.png') no-repeat center; background-size: 24px 24px; outline: 0; width: 24px; height: 24px; padding: 4px; border: 0; }
+select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 0 0 -34px; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background: url('select.png') no-repeat center; background-size: 24px 24px; outline: 0; width: 24px; height: 24px; padding: 4px; border: 0; }
 select:hover { background-image: url('select-h.png'); }
 @media screen and (max-height: 700px) {
 	html,body { margin-top: 10px }
