Some basic XHR error detection/reporting

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ select:hover { background-image: url('select-h.png'); }
 <DIV id=content>
 	<H1>AARON OPFER</H1>
 	<DIV>
-		<select id=directory>
+		<select id=directory title="Change Tune">
 			<option value=punkish>PUNKISH</option>
 			<option value=dangerous>DANGEROUS ROAD</option>
 			<option value=simplicity>SOME SIMPLICITY</option>
