--- a/index.html
+++ b/index.html
@@ -3,9 +3,9 @@
 <link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <STYLE>
-body, html { background-color: rgb(22, 0, 26); margin: 0;margin-top: 30px; border: 0; font-family: 'Roboto', sans-serif; color: #aab; }
+body, html { background-color: rgb(22, 0, 26); margin: 0;margin-top: 30px; border: 0; font-family: 'Roboto', sans-serif; color: #aab; cursor: default; user-select: none; -webkit-user-select: none; -moz-user-select: none; }
 canvas { width: 100%; height: 100%; position: absolute; top: 0; left: 0; z-index: 1}
-#content { position: relative; z-index: 2; text-align: center }
+#content { position: relative; z-index: 2; text-align: center; max-width: 320px; margin: auto; }
 
 h1, h2, h3 { text-align:center;}
 .social { border: 2px solid #556; border-radius: 7px; padding: 2px; margin: 4px; width: 24px; height: 24px; background-size: 24px; display: inline-block; background-position: center; background-repeat: no-repeat; background-color: rgba(22, 0, 26, 0.33) }
@@ -15,7 +15,7 @@ h1, h2, h3 { text-align:center;}
 h1 { font-size: 42px; }
 #song { font-size: 32px; display: inline-block; font-weight: bold;}
 h3 { font-size: 22px; font-family: monospace; font-weight: 100; color: #778;}
-select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 0 0 -34px; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background: url('select.png') no-repeat center; background-size: 24px 24px; outline: 0; width: 24px; height: 24px; padding: 4px; border: 0; }
+select { -moz-box-sizing: content-box; box-sizing: content-box; margin: 4px 0 0 -34px; background: transparent; color: #666; vertical-align: top; -webkit-appearance: none; text-indent:100%; white-space: nowrap; overflow: hidden; background: url('select.png') no-repeat center; background-size: 24px 24px; outline: 0; width: 24px; height: 24px; padding: 4px; border: 0; cursor: pointer; }
 select:hover { background-image: url('select-h.png'); }
 @media screen and (max-height: 700px) {
 	html,body { margin-top: 10px }
