Added reddit share link

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@ h1, h2, h3 { text-align:center;}
 .social:hover { border-color: #aab; }
 #fb { background-image: url('fb.png'); } #fb:hover { background-image: url('fb-h.png') }
 #tw { background-image: url('tw.png'); } #tw:hover { background-image: url('tw-h.png') }
+#rd { background-image: url('rd.png'); } #rd:hover { background-image: url('rd-h.png') }
 h1 { font-size: 42px; }
 #title { font-size: 32px; display: inline-block; font-weight: bold;}
 h3 { font-size: 22px; font-family: monospace; font-weight: 100; color: #778;}
@@ -43,6 +44,7 @@ option { color: black; background: white }
 	<IMG src="select-h.png" onload="this.parentNode.removeChild(this)">
 	<IMG src="tw-h.png" onload="this.parentNode.removeChild(this)">
 	<IMG src="fb-h.png" onload="this.parentNode.removeChild(this)">
+	<IMG src="rd-h.png" onload="this.parentNode.removeChild(this)">
 </DIV>
 <DIV id=content>
 	<H1 id="author">AARON OPFER</H1>
@@ -55,7 +57,7 @@ option { color: black; background: white }
 		<label id="title"></label>
 	</DIV>
 	<H3>LOADING<SPAN id=dots>&nbsp;&nbsp;&nbsp;</SPAN></H3>
-	<a title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php" class=social id=fb target="_blank"></a><a title="Share on Twitter" href="https://twitter.com/share" class=social id=tw target="_blank"></a>
+	<a title="Share on Facebook" href="https://www.facebook.com/sharer/sharer.php" class=social id=fb target="_blank"></a><a title="Share on Twitter" href="https://twitter.com/share" class=social id=tw target="_blank"></a><a title="Share on Reddit" class=social id=rd target="_blank" href="http://reddit.com/submit"></a>
 </DIV>
 <CANVAS id=peaks></CANVAS>
 <CANVAS id=scope></CANVAS>
