Add a message for disabled javascript

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@ option { color: black; background: white }
 </DIV>
 <DIV id=content>
 	<H1 id="author">AARON OPFER</H1>
+	<NOSCRIPT>DEMANDS YOU ENABLE JAVASCRIPT</NOSCRIPT>
 	<DIV id=controls>
 		<select id=directory title="Change Tune">
 			<option value=punkish>PUNKISH</option>
