--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@ body, html { background-color: rgb(22, 0, 26); margin: 0;margin-top: 30px; borde
 canvas { width: 100%; position: absolute; left: 0;}
 canvas#scope { z-index: 2; top: 10%; height: 40%;}
 canvas#peaks { z-index: 1; top: 30%; height: 70%;}
-canvas#speed { z-index: 3; top: 0; height: 40px;}
+canvas#speed { z-index: 3; top: -40px; height: 40px;}
+canvas.dragging#speed { z-index: 5; }
 #content { position: relative; z-index: 4; text-align: center; max-width: 600px; margin: auto; }
 h1, h2, h3 { text-align:center;}
 .social { border: 2px solid #556; border-radius: 7px; padding: 2px; margin: 4px; width: 24px; height: 24px; background-size: 24px; display: inline-block; background-position: center; background-repeat: no-repeat; background-color: rgba(22, 0, 26, 0.33) }
