Added "olddd" song

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@ option { color: black; background: white }
 			<option value=punkish>PUNKISH</option>
 			<option value=dangerous>DANGEROUS ROAD</option>
 			<option value=simplicity>SOME SIMPLICITY</option>
+			<option value=olddd>OLDDD</option>
 		</select>
 		<label id="title"></label>
 	</DIV>
