Add "silly" song

--- a/index.html
+++ b/index.html
@@ -56,6 +56,7 @@ option { color: black; background: white }
 			<option value=dangerous>DANGEROUS ROAD</option>
 			<option value=simplicity>SOME SIMPLICITY</option>
 			<option value=olddd>OLDDD</option>
+			<option value=silly>SILLY</option>
 		</select>
 		<label id="title"></label>
 	</DIV>
