Added sim city 2000 song

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@ option { color: black; background: white }
 			<option value=simplicity>SOME SIMPLICITY</option>
 			<option value=olddd>OLDDD</option>
 			<option value=silly>SILLY</option>
+			<option value=sim>SIM CITY 2000</option>
 		</select>
 		<label id="title"></label>
 	</DIV>
