--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@ option { color: black; background: white }
 			<option value=olddd>OLDDD</option>
 			<option value=silly>SILLY</option>
 			<option value=sim>SIM CITY 2000</option>
+			<option value=spw>SHORT PLANE WALKING</option>
 		</select>
 		<label id="title"></label>
 	</DIV>
