--- a/index.html
+++ b/index.html
@@ -57,8 +57,12 @@ option { color: black; background: white }
 			<option value=simplicity>SOME SIMPLICITY</option>
 			<option value=olddd>OLDDD</option>
 			<option value=silly>SILLY</option>
-			<option value=sim>SIM CITY 2000</option>
 			<option value=spw>SHORT PLANE WALKING</option>
+			<option value=buster>BUSTER</option>
+			<option disabled>==REMIXES==</option>
+			<option value=sim>SIM CITY 2000</option>
+			<option value=8xel>8XEL F</option>
+			<option value=sweden>SWEDEN</option>
 		</select>
 		<label id="title"></label>
 	</DIV>
