Adding "loathing" song

--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@ option { color: black; background: white }
 			<option value=silly>SILLY</option>
 			<option value=spw>SHORT PLANE WALKING</option>
 			<option value=buster>BUSTER</option>
+			<option value=loathing>LOATHING</option>
 			<option disabled>==REMIXES==</option>
 			<option value=sim>SIM CITY 2000</option>
 			<option value=8xel>8XEL F</option>
