Added two new songs: Bubbles and Distant Stars

--- a/index.html
+++ b/index.html
@@ -58,8 +58,10 @@ option { color: black; background: white }
 			<option value=olddd>OLDDD</option>
 			<option value=silly>SILLY</option>
 			<option value=spw>SHORT PLANE WALKING</option>
+			<option value=bubbles>BUBBLES</option>
 			<option value=buster>BUSTER</option>
 			<option value=loathing>LOATHING</option>
+			<option value=stars>DISTANT STARS</option>
 			<option disabled>==REMIXES==</option>
 			<option value=sim>SIM CITY 2000</option>
 			<option value=8xel>8XEL F</option>
