added popcorn; add https

--- a/index.html
+++ b/index.html
@@ -2,7 +2,11 @@
 <HTML>
 <HEAD>
 <TITLE>WebAudio Loop Machine - Aaron Opfer</TITLE>
-<link href='http://fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+<link href='//fonts.googleapis.com/css?family=Roboto:100' rel='stylesheet' type='text/css'>
+<link rel="apple-touch-icon" href="apple-touch-icon-precomposed.png">
+<link rel="apple-touch-icon" sizes="72x72" href="apple-touch-icon-72x72-precomposed.png">
+<link rel="apple-touch-icon" sizes="114x114" href="apple-touch-icon-114x114-precomposed.png">
+<link rel="apple-touch-icon" sizes="144x144" href="apple-touch-icon-144x144-precomposed.png">
 <link rel="icon" id="favicon">
 <meta name="viewport" content="width=device-width, user-scalable=no">
 <STYLE>
@@ -66,6 +70,7 @@ option { color: black; background: white }
 			<option value=sim>SIM CITY 2000</option>
 			<option value=8xel>8XEL F</option>
 			<option value=sweden>SWEDEN</option>
+			<option value=popcorn>POPCORN</option>
 		</select>
 		<label id="title"></label>
 	</DIV>
